# recordara-planner

./: .gitignore  README.md  deploy.sh  pyproject.toml
.github/workflows/: deploy.yml
backend/: README.md
backend/data/: converter.py  participants_anon.csv  programmation.txt  saumon.csv  tasks.csv
backend/planner/: main.py
backend/tests/: test_assignment_planner.py
data/: tasks.csv
frontend/: README.md  app.vue  dist  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/components/: ExportTimetable.vue  FileUpload.vue  GanttChart.vue  LanguageSwitcher.vue  ParticipantsView.vue  TasksView.vue  WorkloadBoxPlot.vue
frontend/composables/: useAssignments.js
frontend/i18n/locales/: en.json  fr.json
frontend/server/api/: assignments.get.js  upload-assignments.post.js
planner/: __init__.py  main.py
tests/: __init__.py  test_assignment_planner.py
