[project]
name = "planner"
version = "0.1.0"
description = "A Python project created with Poetry"
authors = [
    {name = "Minh Hoang Dang"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.14.6206,<10.0.0",
    "pandas>=1.5.0,<3.0.0",
    "ruff (>=0.12.12,<0.13.0)",
    "pyright (>=1.1.405,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[project.scripts]
planner = "planner.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
